# COSC-4P80-Assignment-2

./: .gitmodules  2.txt  CMakeLists.txt  commit.py
include/assign2/: common.h  file.h  functions.h  global_magic.h  initializers.h  layer.h  network.h
lib/eigen-3.4.0/unsupported/test/: cxx11_tensor_block_access.cpp  cxx11_tensor_block_io.cpp
src/: file.cpp  main.cpp
